OODT-990 Enable OODT to build under JDK 10.X